tdf#97066 - Update selected items on CTRL-A command

Change-Id: I4f20b8e744bf99edd0677839654aa78aadcbfc85